# Avdan-JS

./: Cargo.toml  META  README.md  grep  mainfest.avdan  test.help
macros/: Cargo.toml
macros/permissions/: Cargo.toml
macros/permissions/src/: lib.rs
macros/src/: lib.rs
src/: Avdan.rs  api.rs  core.rs  main.rs
src/Avdan/: api.rs  loader.rs  runtime.rs  security.rs  utils.rs
src/Avdan/api/: clipboard.rs  debug.rs  file.rs  net.rs  pipe.rs  shell.rs
src/Avdan/api/net/: fetch.rs
src/Avdan/runtime/: avmod.rs  message.rs  task.rs
src/Avdan/runtime/avmod/: internal.rs  js.rs  json.rs  resource.rs  store.rs
src/api/: clipboard.rs  clipboard_bind.rs  debug_bind.rs  file.rs  pipe.rs  shell.rs  utils_js.rs
src/core/: js.rs
test/: Main.js  index.d.ts  manifest.avdan.json  node.js  spec.d.ts  test.ts  test_module.mjs  tsconfig.json
test/clipboard/: Main.js  index.d.ts  manifest.avdan.json  readText.js  test.ts
test/misc/: avdan.d.ts
test/module1/: Main.js  avdan.d.ts  manifest.avdan.json
test/module2/: Main.js  avdan.d.ts  manifest.avdan.json
test/moduleTest/: Main.js  test.mjs
test/ts/: extension.ts
