[package]
name = "proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v8 = "0.42.0"
colored = "2"
avdanos-search-macros = {path="./macros"}
serde_json = "1.0.79"
serde = {version="1.0.79", features=["derive"]}