[package]

name = "avdan-js"
version = "0.1.0"
edition = "2021"
description = "JS runtime proof-of-concept for interactions with AvdanOS"
author = "Sammy99jsp"

[dependencies]

v8 = "0.44.1"
colored = "2"
avdanos-search-macros = { path="./macros" }
serde_json = "1.0.79"
serde = { version="1.0.79", features=["derive"] }
tokio = "1.18.2"
futures = "0.3.21"
reqwest= { version="0.11.10", features=["blocking"] }
rand = "0.8.5"
phf = "0.10.1"
